uv unwrap node, weird values #99284

Closed
opened 2022-06-29 23:00:53 +02:00 by Nahuel Belich · 12 comments

System Information
Operating system: Linux-5.13.0-51-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-29 17:28, hash: 0ea282f746
Worked: (newest version of Blender that worked as expected)

Short description of error
similar to other bug i reported a few days ago ( https://developer.blender.org/T99239 ) although probably not the same issue, now with the new UVunwrap node trying to see what the node does, it returns really weird values

bugmem.mp4

Exact steps for others to reproduce the error
bug_uvnode.blend
turn on and off the modifier

**System Information** Operating system: Linux-5.13.0-51-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-29 17:28, hash: `0ea282f746` Worked: (newest version of Blender that worked as expected) **Short description of error** similar to other bug i reported a few days ago ( https://developer.blender.org/T99239 ) although probably not the same issue, now with the new UVunwrap node trying to see what the node does, it returns really weird values [bugmem.mp4](https://archive.blender.org/developer/F13239478/bugmem.mp4) **Exact steps for others to reproduce the error** [bug_uvnode.blend](https://archive.blender.org/developer/F13239484/bug_uvnode.blend) turn on and off the modifier
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscribers: @aleksijuvani, @mod_moder

Added subscribers: @aleksijuvani, @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Hello, @aleksijuvani (I hope I did not confuse the person responsible for the UV code)
image.png
Looks like there is still -NaN in the UV

Hello, @aleksijuvani (I hope I did not confuse the person responsible for the UV code) ![image.png](https://archive.blender.org/developer/F13240795/image.png) Looks like there is still -NaN in the UV

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

@HooglyBoogly I took a look at this, and I see that when committing the patch you've changed how the Array<float3> uv arrays are constructed. The contents are now uninitialized whereas they should be zero-initialized.

@HooglyBoogly I took a look at this, and I see that when committing the patch you've changed how the `Array<float3> uv` arrays are constructed. The contents are now uninitialized whereas they should be zero-initialized.

In #99284#1383639, @aleksijuvani wrote:
@HooglyBoogly I took a look at this, and I see that when committing the patch you've changed how the Array<float3> uv arrays are constructed. The contents are now uninitialized whereas they should be zero-initialized.

Is it possible to avoid zero initialization in favor of write processing?

> In #99284#1383639, @aleksijuvani wrote: > @HooglyBoogly I took a look at this, and I see that when committing the patch you've changed how the `Array<float3> uv` arrays are constructed. The contents are now uninitialized whereas they should be zero-initialized. Is it possible to avoid zero initialization in favor of write processing?
Hans Goudey self-assigned this 2022-07-02 16:09:32 +02:00
Member

Added subscriber: @Hans-6

Added subscriber: @Hans-6
Member

@HooglyBoogly I took a look at this, and I see that when committing the patch you've changed how the Array uv arrays are constructed. The contents are now uninitialized whereas they should be zero-initialized.

Eek, I'm sorry about that. The syntax made it unclear that was the goal, but I should have asked you about it. I'll fix it then.

Is it possible to avoid zero initialization in favor of write processing?

This would be nice, and that was my thought when changing it. I'll make sure that isn't possible when I look at this.

>@HooglyBoogly I took a look at this, and I see that when committing the patch you've changed how the Array<float3> uv arrays are constructed. The contents are now uninitialized whereas they should be zero-initialized. Eek, I'm sorry about that. The syntax made it unclear that was the goal, but I should have asked you about it. I'll fix it then. >Is it possible to avoid zero initialization in favor of write processing? This would be nice, and that was my thought when changing it. I'll make sure that isn't possible when I look at this.
Member

Removed subscriber: @Hans-6

Removed subscriber: @Hans-6

This issue was referenced by faac25fefe

This issue was referenced by faac25fefedf4b3318d4f129ebda9efca16e48c5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99284
No description provided.