Fix T99284: Undefined values output from UV nodes

When committing D14389 I assumed that the output arrays didn't need
to be initialized, but the UV parameterizer uses the intial values of UVs.